# chain_binomial_rippler

./: CBR_SI.ipynb  CBR_SIR.ipynb  LICENSE  README.md  chain_binomial_rippler.py  dCBR_SIR.ipynb  damped_chain_binomial_rippler.py  discrete_rejection_sampling.py  hypergeometric.ipynb  hypergeometric.py  pyproject.toml
