[tool.poetry]
name = "bp_add_delete"
version = "0.1.0"
description = "Branching process add/delete for discrete time epidemics"
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
tensorflow = "^2.6.0"
tensorflow-probability = "^0.14.1"
gemlib = {git = "https://gitlab.com/gem-epidemics/gemlib.git"}
matplotlib = "^3.4.3"
ipympl = "^0.8.2"
libclang = "<12.0.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.1"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
