[tool.poetry]
name = "bp_add_delete"
version = "0.1.0"
description = "Branching process add/delete for discrete time epidemics"
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0, <3.10.0"
gemlib = {git = "https://gitlab.com/gem-epidemics/gemlib.git", branch="chain-binomial-sampler"}
matplotlib = "^3.4.3"
ipympl = "^0.8.2"
pandas = "^1.3.5"
tensorboard-plugin-profile = "^2.5.0"
seaborn = "^0.12.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.1"
ipython = "^7.28.0"
jupyterlab-flake8 = "^0.7.1"

[tool.black]
line-length=79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
